# rstparser

./: BENCHMARKING.md  Cargo.toml  README.md  custom_directives.py  customcpp.cpp  large_test.rst  rstparser_links.toml  run_benchmarks.sh  run_timing_example.sh  validate_rst_snippets.py
.clinerules/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
benches/: aggregator_benchmarks.rs  end_to_end_benchmarks.rs  extractor_benchmarks.rs  file_walker_benchmarks.rs  parser_benchmarks.rs  processor_benchmarks.rs
examples/: custom_directives.py  customcpp.cpp  test_feature_a.rst  test_interface_c.rst  test_module_b.rst  timing_example.rs
output/: anotherdirective.json  mydirective.json
src/: aggregator.rs  directive_functions.rs  extractor copy.rs  extractor.rs  file_walker.rs  lib.rs  link_data.rs  main.rs  parser.rs  processor.rs  timing.rs
tests/: test_cpp_py_extraction.rs
