[package]
name = "rstparser"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10.2"
once_cell = "1.18" # Added once_cell

[dev-dependencies]
tempfile = "3.8.0"
criterion = "0.5.1"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "processor_benchmarks"
harness = false

[[bench]]
name = "file_walker_benchmarks"
harness = false

[[bench]]
name = "aggregator_benchmarks"
harness = false

[[bench]]
name = "end_to_end_benchmarks"
harness = false

[[bench]]
name = "extractor_benchmarks"
harness = false
